prometheus-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: prometheus-route
  namespace: anarayan
spec:
  path: /
  to:
    kind: Service
    name: prometheus-service
  port:
    targetPort: port-1
